Fix alignment of icons

--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -30,7 +30,7 @@
     font-size: 30px;
     float: right;
     position: relative;
-    bottom: 69px;
+    bottom: 73px;
     left: 6px;
     line-height: 2;
     padding: 4px;
@@ -64,7 +64,7 @@
 }
 
 .max_guest, .number_rooms, .number_bathrooms {
-    position: absolute;
+    position: avsolute;
     display: inline-block;
     height: 100px;
     background-position: 24px 20px;
